pxc/tests/test_01_px/constinh3.px

import io;

interface ifoo {
  function int mfoo(long v);
}

struct sfoo : ifoo : {
  function int mfoo(long v) const { // error: constness
    return 3 + v;
  }
}

ptr{sfoo} p = ptr(sfoo());
ptr{ifoo} ip = p;
io::println(ip->mfoo(3));

